--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
-		"deploy": "gh-pages -d dist",
-		"preview": "vite preview"
+		"predeploy": "vite build",
+		"deploy": "touch build/.nojekyll && npm run gh-pages",
+		"preview": "vite preview",
+		"gh-pages": "npm run build && npx gh-pages -d build"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-static": "^2.0.1",
 		"@sveltejs/kit": "^1.5.0",
 		"autoprefixer": "^10.4.14",
+		"gh-pages": "^5.0.0",
 		"postcss": "^8.4.21",
 		"prettier": "^2.8.7",
 		"prettier-plugin-tailwindcss": "^0.2.5",
@@ -22,9 +26,9 @@
 	"type": "module",
 	"dependencies": {
 		"@popperjs/core": "^2.11.7",
+		"@sveltejs/adapter-static": "^2.0.1",
 		"classnames": "^2.3.2",
 		"flowbite": "^1.6.4",
-		"flowbite-svelte": "^0.34.3",
-		"gh-pages": "^5.0.0"
+		"flowbite-svelte": "^0.34.3"
 	}
 }
